agegue una Y a google play

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </div>
               <div class="row border">
              
-                <article class="border border-primary col-12 col-md-6 col-lg-3"><h6>Navegación</h6> <ul class="list-unstyled">
+                <article class="border border-primary col-12 col-md-6  col-lg-3"><h6>Navegación</h6> <ul class="list-unstyled">
                     <li><a href="/pages/quienesSomos.html" class="link-secondary link-underline-opacity-0 link-secondary link-underline-opacity-100-hover">¿Quienes somos?</a></li>
                     <li><a href="/pages/seguridad.html" class="link-secondary link-underline-opacity-0 link-secondary link-underline-opacity-100-hover">Seguridad</a></li>
                     <li><a href="/pages/contacto.html" class="link-secondary link-underline-opacity-0 link-secondary link-underline-opacity-100-hover">Contacto</a></li>
@@ -74,7 +74,7 @@
                 <article class="border border-primary col-12 col-md-6 col-lg-3"><h6>Unite</h6>
                 <a href="/pages/error404.html"></a> 
                 <div class="text-center">
-                  <img src="/img/badge-apple-store.svg" alt="Apple Store" class="mb-2"> <img src="/img/google-play-badge-bb.svg" alt="Google Play">
+                  <img src="/img/badge-apple-store.svg" alt="Apple Store" class="mb-2"> <img src="/img/google-play-badge-bb.svg" alt="Google Playy">
                 </div>
                  </article>
                   
