--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,19 +65,26 @@
             <article class=" col-12 col-md-6">
                 <form>
                     <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Email address</label>
+                      <label for="exampleInputEmail1" class="form-label">Email</label>
                       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                      <div id="emailHelp"></div>
                     </div>
                     <div class="mb-3">
-                      <label for="exampleInputPassword1" class="form-label">Password</label>
+                      <label for="apellido" class="w-100">Nombre y Apellido</label>
+                      <input type="text" class="w-100 border border-secondary rounded-2 p-2 " minlength="3" maxlength="40" placeholder="Ej: Juan Perez" id="apellido" required/> </div>
+                      <div class="mb-3 form-check p-0">
+                        <label for="telefono">Telefono</label>
+                        <input type="tel"  class="w-100 border border-secondary rounded-2 p-2" id="telefono" placeholder="Ej: (+54)3815556667"/>
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
                       <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
-                    <div class="mb-3 form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    <div class="mb-3 form-check p-0">
+                      <label for="consulta" class="w-100">Consulta:</label>
+                      <textarea id="consulta" class="w-100 border rounded-2 form-control" style="resize: none;" rows="4" placeholder="¡Agregue aquí su consulta!" minlength="10" maxlength="250" required></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
                   </form>
             </article>
             <article class=" col-12 col-md-6">
