--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">¿Quienes somos?</a>
+              <a class="nav-link" href="/pages/quienesSomos.html">¿Quienes somos?</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Preguntas Frecuentes</a>
