--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="/pages/quienesSomos.html">¿Quienes somos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Preguntas Frecuentes</a>
+              <a class="nav-link" href="/pages/preguntasfrecuentes.html">Preguntas Frecuentes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Robo o extravio</a>
