--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/css/style.css">
         <title>CryptoFinn</title>
       </head>
-<body>
+<body> <header> 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
           <a class="navbar-brand marca" href="../index.html">CryptoFin</a>
@@ -31,7 +31,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./quienesSomos.html"
+                <a class="nav-link active" href="./quienesSomos.html"
                   >¿Quienes somos?</a
                 >
               </li>
@@ -47,13 +47,13 @@
                 <a class="nav-link" href="./seguridad.html">Seguridad</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="./contacto.html">Contactos</a>
+                <a class="nav-link" href="./contacto.html">Contactos</a>
               </li>
             </ul>
           </div>
         </div>
-      </nav>
-      <script src="/js/bootstrap.min.js"></script>
+      </nav> </header>
+    
 
       <main>
         <section class="bg-primary-subtle py-4"> 
@@ -68,5 +68,118 @@
         </section>
 
       </main>
+      <footer class="bg-dark-subtle py-3">
+        <div class="container">
+          <div
+            class="d-flex gap-3 justify-content-center justify-content-md-start"
+          >
+            <h4 class="marca align-self-center mb-0">CryptoFin</h4>
+            <a href="#" class="link-secondary"
+              ><i class="bi bi-instagram fs-4"></i
+            ></a>
+            <a href="#" class="link-secondary">
+              <i class="bi bi-twitter-x fs-4"></i
+            ></a>
+            <a href="#" class="link-secondary"
+              ><i class="bi bi-facebook fs-4"></i
+            ></a>
+          </div>
+          <div class="row">
+            <article class="col-12 col-md-6 col-lg-3 text-center text-md-start">
+              <h6 class="text-secondary">Navegación</h6>
+              <ul class="list-unstyled">
+                <li>
+                  <a
+                    href="./quienesSomos.html"
+                    class="link-secondary link-underline-opacity-25 link-underline-opacity-100-hover"
+                    >¿Quienes somos?</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./seguridad.html"
+                    class="link-secondary link-underline-opacity-0"
+                    >Seguridad</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./preguntasFrecuentes.html"
+                    class="link-secondary link-underline-opacity-0"
+                    >Preguntas frecuentes</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./contactos.html"
+                    class="link-secondary link-underline-opacity-0"
+                    >Contactos</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./error404.html"
+                    class="link-secondary link-underline-opacity-0"
+                    >Ayuda</a
+                  >
+                </li>
+              </ul>
+            </article>
+            <article class="col-12 col-md-6 col-lg-3 text-center text-md-start">
+              <h6 class="text-secondary">Contacto</h6>
+              <ul class="list-unstyled">
+                <li>
+                  <a
+                    href="./error404.html"
+                    class="link-secondary link-underline-opacity-25 link-underline-opacity-100-hover"
+                    >Email: cryptoFin@mail.com</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="./error404.html"
+                    class="link-secondary link-underline-opacity-0"
+                    >Teléfono: +54 3817776635</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://maps.app.goo.gl/gf4MW3TFYr9LGLHT8"
+                    target="_blank"
+                    class="link-secondary link-underline-opacity-0"
+                    >Dirección: Gral. José María Paz 576, San Miguel de Tucumán,
+                    Tucumán</a
+                  >
+                </li>
+              </ul>
+            </article>
+            <article class="col-12 col-md-6 col-lg-3">
+              <a href="./error404.html">
+                <img
+                  src="../img/usuariosfinancieros.png"
+                  alt="Logo usuarios financieros Banco Central"
+                  class="w-100 mb-3"
+                />
+              </a>
+            </article>
+            <article class="col-12 col-md-6 col-lg-3 text-center">
+              <h6 class="text-secondary">Unite</h6>
+  
+              <a href="./error404.html"
+                ><img
+                  src="../img/badge-apple-store.svg"
+                  alt="Logo Apple Store"
+                  class="mb-3"
+              /></a>
+              <a href="./pages/error404.html"
+                ><img
+                  src="../img/google-play-badge-bb.svg"
+                  alt="Logo google play"
+              /></a>
+            </article>
+          </div>
+        </div>
+      </footer>
+      <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
